--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -19,8 +19,8 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Docker image # Build the Docker image
+      - name: Build Docker Image # Build the Docker image
         run: docker build -t ${{ github.repository }}:latest .
 
-      - name: Push Docker image # Push the Docker image to the registry
+      - name: Push Docker Image # Push the Docker image to the registry
         run: docker push ${{ github.repository }}:latest
