--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -24,3 +24,13 @@ jobs:
 
       - name: Push Docker Image # Push the Docker image to the registry
         run: docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
+
+      - name: Deploy to Server # Deploy the Docker image to the server
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          key: ${{ secrets.REMOTE_SSH_KEY }}
+          script: |
+            docker pull ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
+            touch test-deploy.txt
