--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -32,5 +32,4 @@ jobs:
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.REMOTE_SSH_KEY }}
           script: |
-            docker pull ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
-            touch test-deploy.txt
+            echo "Connection success"
