--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -32,4 +32,7 @@ jobs:
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.REMOTE_SSH_KEY }}
           script: |
-            echo "Connection success"
+            docker pull ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
+            docker stop app_container || true
+            docker rm app_container || true
+            docker run -d --name app_container -p 80:80 ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
